--- a/navbar.html
+++ b/navbar.html
@@ -1,8 +1,51 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <title>navbar</title>
         <style>
+            .ping1,.ping2,.ping3{
+                position: relative;
+                opacity: 0.70;
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+            }
+            .ping1{
+                background-image: url(download\ \(1\).jpeg);
+                min-height: 100%;
+            }
+            .ping2{
+                background-image: url(download\ \(2\).jpeg);
+                min-height: 100%;
+            }
+            .ping3{
+                background-image: url(download\ \(3\).jpeg);
+                min-height: 100%;
+            }
+            .section{
+                text-align: center;
+                padding: 50px 80px;
+            }
+            .section-light{
+                background-color: white;
+                color: black;
+            }
+            .section-dark{
+                background-color: black;
+                color: rgb(255, 255, 255);
+            }
+            .ptext{
+                position: absolute;
+                top: 50%;
+                width: 100%;
+                text-align: center;
+                color: black;
+                font-size: 27px;
+                letter-spacing: 8px;
+                text-transform: uppercase;
+            }
             body{
                 margin: 0px;
                 font-family: Arial, Helvetica, sans-serif;
@@ -35,7 +78,7 @@ background-color: aqua;
             <a href="#">contact</a>
             </div>
             <section>
-                <img class="myslides" src="OIP(2).jpeg" style="height:500px">
+                
                 <img class="myslides" src="OIP(1).jpeg" style="height:500px">
             
                 <img class="myslides" src="OIP.jpeg" style="height:500px">
