--- a/navbar.html
+++ b/navbar.html
@@ -143,6 +143,43 @@ background-color: aqua;
                         </span>
                     </div>
                 </div>
+                <br>
+                <span class=”border trans” style="font-size: 40px ;"> 
+                   <center>welcome everyone to my website</center>
+                </span></br>
+                <section class= "section-dark">
+                    <h2>food</h2>
+                    <p>Food is any substance consumed by living organisms to provide nutritional support and energy necessary for life.
+                    Definition
+                    Food typically consists of various nutrients such as carbohydrates, proteins, fats, vitamins, and minerals. It can
+                    originate from plants, animals, or fungi. When ingested, food is digested and metabolized by the body to support growth,
+                    repair tissues, and maintain vital processes.</p>
+                </section>
+                <p>pizza  </p>
+                <img src="download.jpeg"style=”width:170px;height:170px;margin-left:15px;float:right;>
+                <p>Pizza is a popular Italian dish consisting of a flattened, usually round, bread dough base topped with various
+                ingredients such as tomato sauce, cheese, and toppings like vegetables, meat, and spices, then baked at a high
+                temperature. It's a globally enjoyed food, with a rich history and diverse variations.</p>
+                <p>pizza  </p>
+                <img src="download (2).jpeg"style=”width:170px;height:170px;margin-left:15px;float:right;>
+                <p>Key Aspects of Pizza:
+                Origin:
+                Pizza originated in Naples, Italy, and has become a worldwide favorite.
+                Base:
+                The foundation of pizza is a flatbread made from wheat flour, often referred to as the crust.
+                Toppings:
+                A wide array of toppings can be added, including tomato sauce (or other sauces), various cheeses (like mozzarella),
+                vegetables, meats, and spices.
+                Baking:
+                Pizzas are typically baked in an oven, often a wood-fired oven, at high temperatures.
+                Variations:
+                Pizza has evolved into many regional and personal variations, with different crusts, sauces, and toppings.
+                Cultural Significance:
+                Pizza is more than just food; it's a cultural icon and a symbol of Italian cuisine.
+                Popularity:
+                Pizza is one of the most popular fast-foods globally, with a large number of pizzerias and pizza restaurants worldwide.
+                    </p>  
+
                 <div class="footer">
                     <p>copy all rights and reserved by pratham bansal</p>
                     </div>
